2007-08-31 13:58 Jan Kozusznik

	* src/org/jcae/viewer3d/FPSBehavior.java: Fix call to
	firePropertyChangeListenerPropertyChange().

2007-07-16 11:43  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/TextureFitter.java,
	  src/org/jcae/viewer3d/test/TextureFitterTest.java: Allows
	  disabling projection normalisation. Reenable mipmapping.

2007-07-03 08:06  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: more fixes concerning
	  https://java3d.dev.java.net/issues/show_bug.cgi?id=233 (contrib
	  erwann)

2007-06-26 11:56  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: Fix ArrayIndexOutOfBound
	  exception when working with model clips

2007-06-25 15:09  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/DefaultColorMapper.java: Add min, max,
	  infinity getters

2007-06-14 12:25  Jerome Robert <jeromerobert@users.sourceforge.net>

	* build.properties, build.xml: Allow to do not build the OEMM
	  viewer

2007-06-07 09:44  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/cad/ViewableCAD.java: Allow to call
	  ViewableCAD.domainsChangedPerform with null

	* src/org/jcae/viewer3d/Palette.java: Fix
	  ArrayIndexOutOfBoundsException for negative group ids

2007-05-30 11:24:50  Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMViewer.java: In jcae.jar, OTriangle class
	  has been replaced by VirtualHalfEdge.

2007-04-27 17:34  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/TextureFitter.java,
	  src/org/jcae/viewer3d/test/TextureFitterTest.java: Add a texture
	  fitter tool

2007-04-26 14:25  tag V0_14_1

2007-04-23 14:59  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: Fix a division by zero when the
	  view width is 0

2007-04-20 15:25  Jerome Robert <jeromerobert@users.sourceforge.net>
